chore(swagger): update swagger documentation
