# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\TaskController;
+use App\Http\Controllers\API\UserController;
 use App\Http\Controllers\Auth\LoginController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -22,11 +23,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+Route::apiResource('users', UserController::class);
 Route::post('login', [LoginController::class, 'login']);;
 Route::post('register', [RegisteredUserController::class, 'store']);;
 
-
 Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('tasks', TaskController::class);
-    Route::apiResource('users', UserController::class);
 });
